--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": "^7.0.8",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "~1.1",
         "sensio/framework-extra-bundle": "^5.3",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "*",
@@ -27,8 +28,7 @@
         "symfony/twig-bundle": "4.3.*",
         "symfony/validator": "*",
         "symfony/web-link": "*",
-        "symfony/yaml": "*",
-        "doctrine/annotations": "~1.1"
+        "symfony/yaml": "*"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
